--- a/package.json
+++ b/package.json
@@ -31,5 +31,10 @@
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.1",
     "vips": "^1.0.0"
+  },
+  "overrides": {
+    "react-server-dom-webpack@0.0.0-experimental-c8b778b7f-20220825": {
+      "react": "^18.2.0"
+    }
   }
 }
