--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@mdx-js/react": "^2.0.0",
     "autoprefixer": "^10.4.16",
+    "babel-plugin-lodash": "^3.3.4",
     "gatsby": "^5.13.1",
     "gatsby-plugin-image": "^3.13.0",
     "gatsby-plugin-manifest": "^5.13.0",
@@ -31,10 +32,5 @@
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.1",
     "vips": "^1.0.0"
-  },
-  "overrides": {
-    "react-server-dom-webpack@0.0.0-experimental-c8b778b7f-20220825": {
-      "react": "^18.2.0"
-    }
   }
 }
