--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@mdx-js/react": "^2.0.0",
+    "@mdx-js/react": "3.0.0",
     "autoprefixer": "^10.4.16",
     "babel-plugin-lodash": "^3.3.4",
     "gatsby": "^5.13.1",
