--- a/package.json
+++ b/package.json
@@ -14,28 +14,32 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@mdx-js/react": "2.3.0",
-    "autoprefixer": "^10.4.16",
+    "@mdx-js/react": "^3.0.1",
+    "autoprefixer": "^10.4.19",
+    "axios": "^1.6.8",
     "babel-plugin-lodash": "^3.3.4",
-    "gatsby": "^5.13.1",
-    "gatsby-plugin-image": "^3.13.0",
-    "gatsby-plugin-manifest": "^5.13.0",
-    "gatsby-plugin-mdx": "^5.13.0",
-    "gatsby-plugin-postcss": "^6.13.0",
-    "gatsby-plugin-sharp": "^5.13.0",
-    "gatsby-plugin-sitemap": "^6.13.0",
-    "gatsby-source-filesystem": "^5.13.0",
-    "gatsby-transformer-sharp": "^5.13.0",
+    "gatsby": "^5.13.4",
+    "gatsby-plugin-image": "^3.13.1",
+    "gatsby-plugin-manifest": "^5.13.1",
+    "gatsby-plugin-mdx": "^5.13.1",
+    "gatsby-plugin-postcss": "^6.13.1",
+    "gatsby-plugin-sharp": "^5.13.1",
+    "gatsby-plugin-sitemap": "^6.13.1",
+    "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-remark": "^6.13.1",
+    "gatsby-transformer-sharp": "^5.13.1",
     "gh-pages": "^6.1.1",
-    "postcss": "^8.4.33",
+    "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.1",
+    "react-server-dom-webpack": "npm:react-server-dom-webpack@0.0.1",
+    "tailwindcss": "^3.4.3",
     "vips": "^1.0.0"
   },
-  "overrides": {
-    "react-server-dom-webpack@0.0.0-experimental-c8b778b7f-20220825": {
-      "react": "^18.2.0"
-    }
+  "devDependencies": {
+    "@types/bun": "latest"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
   }
 }
