--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,6 +5,4 @@ account_id = "0ae2896ad4579f3c0f2ffa8d34990138"
 
 [env.production]
 name = "tetsby-worker"
-vars = {
-  GATSBY_GITHUB_TOKEN = "$GATSBY_GITHUB_TOKEN"
-}
+vars = {GATSBY_GITHUB_TOKEN = "$GATSBY_GITHUB_TOKEN"}
