--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-server-dom-webpack": "npm:react-server-dom-webpack@0.0.1",
+    "sharp": "^0.33.3",
     "tailwindcss": "^3.4.3",
     "vips": "^1.0.0"
   },
