--- a/package.json
+++ b/package.json
@@ -36,5 +36,12 @@
     "sharp": "^0.33.3",
     "tailwindcss": "^3.4.3",
     "vips": "^1.0.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-class-properties": "^7.24.1",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.24.1",
+    "@babel/plugin-transform-numeric-separator": "^7.24.1",
+    "@babel/plugin-transform-object-rest-spread": "^7.24.1",
+    "@babel/plugin-transform-optional-chaining": "^7.24.1"
   }
 }
