Fix dependency issues and update wrangler.toml

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,4 +6,7 @@ account_id = "0ae2896ad4579f3c0f2ffa8d34990138"
 [env.production]
 name = "tetsby-worker"
 vars = { GATSBY_GITHUB_TOKEN = "$GATSBY_GITHUB_TOKEN" }
+
+[build]
+command = "yarn build"
 pages_build_output_dir = "public"
