--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-transformer-remark": "^6.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
     "gh-pages": "^6.1.1",
+    "graphql": "^16.8.1",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
