--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-transformer-sharp": "^5.13.1",
     "gh-pages": "^6.1.1",
     "graphql": "^16.8.1",
+    "node-gyp": "^10.1.0",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
