--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@babel/core": "^7.24.4",
     "@mdx-js/react": "^3.0.1",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
