--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.24.4",
+    "@mdx-js/react": "^3.0.1",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
     "babel-plugin-lodash": "^3.3.4",
@@ -30,11 +31,9 @@
     "gatsby-transformer-sharp": "^5.13.1",
     "gh-pages": "^6.1.1",
     "graphql": "^16.8.1",
-    "node-gyp": "^10.1.0",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sharp": "^0.33.3",
     "tailwindcss": "^3.4.3",
     "vips": "^1.0.0"
   },
