--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@babel/core": "^7.24.4",
-    "@mdx-js/react": "^2.3.0",
+    "@babel/core": "^7.24.5",
+    "@mdx-js/react": "^3.0.1",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
     "babel-plugin-lodash": "^3.3.4",
     "gatsby": "^5.13.4",
+    "gatsby-link": "^5.13.1",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
     "gatsby-plugin-mdx": "^5.13.1",
@@ -33,8 +34,8 @@
     "github-markdown-css": "^5.5.1",
     "graphql": "^16.8.1",
     "postcss": "^8.4.38",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.3",
     "vips": "^1.0.0"
   },
@@ -42,7 +43,8 @@
     "@babel/plugin-transform-class-properties": "^7.24.1",
     "@babel/plugin-transform-nullish-coalescing-operator": "^7.24.1",
     "@babel/plugin-transform-numeric-separator": "^7.24.1",
-    "@babel/plugin-transform-object-rest-spread": "^7.24.1",
-    "@babel/plugin-transform-optional-chaining": "^7.24.1"
-  }
+    "@babel/plugin-transform-object-rest-spread": "^7.24.5",
+    "@babel/plugin-transform-optional-chaining": "^7.24.5"
+  },
+  "packageManager": "yarn@4.2.1"
 }
